feature projects telefono fixxato

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <home-container id="home"></home-container>
             <contacts-container  class="row links-container" id="contacts"></contacts-container>
             <projects-container-pc class="row d-none d-md-block container-brand" id="projects"></projects-container-pc>
-            <projects-container-phone class="row projects-phone" id="projects-phone"></projects-container-phone>
+            <projects-container-phone class="row d-md-none projects-phone" id="projects-phone"></projects-container-phone>
             
             
             <div class="row row-cols-3 d-md-none menu-bottom" >
