feature google analytics

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/script.js" type="module" defer></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R0Z9PDEMXV"></script>
 </head>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-R0Z9PDEMXV');
+</script>
 <body>
     <!--div id="flash-text" class="flash-text">click to move  <('o'<)</div-->
     <div id="background"></div>
